--- a/src/static/index.html
+++ b/src/static/index.html
@@ -439,6 +439,6 @@ Bob: Hi Alice, how are you today?"></textarea>
     <script src="/static/libs/wavesurfer-timeline.min.js"></script>
     <script src="/static/shared.js"></script>
     <script src="/static/timeline.js"></script>
-    <script src="/static/app.js"></script>
+    <script type="module" src="/static/app.js"></script>
 </body>
 </html>
