--- a/src/static/index.html
+++ b/src/static/index.html
@@ -249,6 +249,20 @@ Bob: Hi Alice, how are you today?"></textarea>
                                     <label class="label" for="video-prompt">Video Scene Prompt</label>
                                     <textarea id="video-prompt" placeholder="A cinematic scene that matches your story..." style="height: 60px; font-size: 0.8rem; border-color: var(--border); background: rgba(0,0,0,0.2); color: white; width: 100%; border-radius: 4px; padding: 8px;"></textarea>
                                 </div>
+                                <div style="display:grid; grid-template-columns: 1fr 1fr; gap:12px; margin-bottom:12px;">
+                                    <div class="control-group">
+                                        <label class="label" style="font-size:0.7rem;">Guidance Scale</label>
+                                        <input type="number" id="video-guidance" value="3.5" step="0.5" min="1" max="20" class="btn btn-secondary btn-sm" style="width:100%; text-align:left;">
+                                    </div>
+                                    <div class="control-group">
+                                        <label class="label" style="font-size:0.7rem;">Inference Steps</label>
+                                        <input type="number" id="video-steps" value="30" step="1" min="1" max="100" class="btn btn-secondary btn-sm" style="width:100%; text-align:left;">
+                                    </div>
+                                </div>
+                                <div class="control-group" style="margin-bottom:12px;">
+                                    <label class="label" style="font-size:0.7rem;">Seed (-1 for random)</label>
+                                    <input type="number" id="video-seed" value="-1" step="1" class="btn btn-secondary btn-sm" style="width:100%; text-align:left;">
+                                </div>
                                 <div style="display:grid; grid-template-columns: 1fr 1fr; gap:12px;">
                                     <div class="control-group">
                                         <label class="label" style="font-size:0.7rem;">Resolution</label>
