--- a/src/static/index.html
+++ b/src/static/index.html
@@ -246,7 +246,12 @@ Bob: Hi Alice, how are you today?"></textarea>
                             </div>
                             <div id="video-options" style="display:none; margin-top:12px;">
                                 <div class="control-group">
-                                    <label class="label" for="video-prompt">Video Scene Prompt</label>
+                                    <div style="display:flex; justify-content:space-between; align-items:center; margin-bottom:4px;">
+                                        <label class="label" for="video-prompt" style="margin:0;">Video Scene Prompt</label>
+                                        <button class="btn btn-secondary btn-sm" style="padding:2px 8px; font-size:0.7rem;" onclick="suggestVideoScene()" title="Analyze script for prompt ideas">
+                                            <i class="fas fa-sparkles" style="color:var(--accent)"></i> Suggest
+                                        </button>
+                                    </div>
                                     <textarea id="video-prompt" placeholder="A cinematic scene that matches your story..." style="height: 60px; font-size: 0.8rem; border-color: var(--border); background: rgba(0,0,0,0.2); color: white; width: 100%; border-radius: 4px; padding: 8px;"></textarea>
                                 </div>
                                 <div style="display:grid; grid-template-columns: 1fr 1fr; gap:12px; margin-bottom:12px;">
