feat: Implement Generation Audit Log for system transparency

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -469,6 +469,16 @@ Bob: Hi Alice, how are you today?"></textarea>
                             Watermarking helps identify AI-generated content for transparency and compliance.
                         </p>
                     </div>
+
+                    <div class="card" style="grid-column: 1 / -1;">
+                        <div style="display:flex; justify-content:space-between; align-items:center; margin-bottom:16px;">
+                            <h2 style="font-size: 1.1rem;">Generation Audit Log</h2>
+                            <button class="btn btn-secondary btn-sm" onclick="fetchAuditLog()"><i class="fas fa-sync"></i> Refresh</button>
+                        </div>
+                        <div id="audit-log-list" style="max-height:300px; overflow-y:auto; display:flex; flex-direction:column; gap:8px;">
+                            <!-- Audit records will be listed here -->
+                        </div>
+                    </div>
                 </div>
 
                 <div class="card" style="margin-top:24px;">
