--- a/src/static/index.html
+++ b/src/static/index.html
@@ -535,6 +535,24 @@ Bob: Hi Alice, how are you today?"></textarea>
         </main>
     </div>
 
+    <!-- Modals -->
+    <div id="video-modal" class="modal-overlay" style="display:none;" onclick="if(event.target === this) hideVideoModal()">
+        <div class="card-brutalist modal-content" style="max-width:900px; width:95%; padding:0; overflow:hidden;">
+            <div style="display:flex; justify-content:space-between; align-items:center; padding:16px 24px; border-bottom:2px solid var(--accent); background:rgba(255,255,255,0.02);">
+                <h2 id="video-modal-title" style="font-size:1.1rem; margin:0;">Video Preview</h2>
+                <button class="btn btn-danger btn-sm" onclick="hideVideoModal()"><i class="fas fa-times"></i></button>
+            </div>
+            <div style="background:#000; display:flex; justify-content:center; align-items:center; min-height:400px; position:relative;">
+                <video id="video-modal-player" controls style="max-width:100%; max-height:70vh;"></video>
+                <div id="video-subtitle-overlay" style="position:absolute; bottom:15%; left:0; right:0; text-align:center; pointer-events:none; text-shadow: 2px 2px 4px #000; font-weight:700; padding:0 40px; color:#fff;"></div>
+            </div>
+            <div style="padding:16px 24px; display:flex; justify-content:flex-end; gap:12px; background:rgba(255,255,255,0.02); border-top:1px solid var(--border);">
+                <a id="video-modal-download" href="#" download class="btn btn-primary btn-sm"><i class="fas fa-download"></i> Download MP4</a>
+                <button class="btn btn-secondary btn-sm" onclick="hideVideoModal()">Close</button>
+            </div>
+        </div>
+    </div>
+
     <!-- Hidden Elements -->
     <audio id="preview-player" style="display:none"></audio>
 
