style: Unify Technoid Brutalist aesthetic across all main views

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -323,6 +323,13 @@ Bob: Hi Alice, how are you today?"></textarea>
                         </div>
 
 
+                        <div class="control-group">
+                            <label style="display:flex; align-items:center; gap:8px; cursor:pointer;">
+                                <input type="checkbox" id="stream-podcast" checked>
+                                <span class="volt-text" style="font-weight:700; font-size:0.75rem;">ENABLE STREAMING PLAYBACK</span>
+                            </label>
+                        </div>
+
                         <button class="btn btn-primary" style="width:100%; padding:20px;" onclick="generatePodcast()">
                             <i class="fas fa-microphone"></i> PRODUCE FINAL
                         </button>
