--- a/src/static/index.html
+++ b/src/static/index.html
@@ -566,6 +566,7 @@ Click benchmark to start analysis...
     </div>
 
     <!-- Hidden Elements -->
+    <div id="toast-container" style="position:fixed; bottom:80px; right:24px; z-index:10000; display:flex; flex-direction:column; gap:12px; pointer-events:none;"></div>
     <audio id="preview-player" style="display:none"></audio>
 
     <!-- Scripts -->
